--- a/mortgagepod/pod.yaml
+++ b/mortgagepod/pod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
     - name: mortgagepod-mortgage
-      image: 'fxiang/mortgage:0.4.0'
+      image: 'quay.io/dberg1/mortgage:0.4.0'
       ports:
         - containerPort: 9080
           protocol: TCP
