--- a/mortgagerc/replicationcontroller.yaml
+++ b/mortgagerc/replicationcontroller.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mortgagerc-mortgage
-          image: 'fxiang/mortgage:0.4.0'
+          image: 'quay.io/dberg1/mortgage:0.4.0'
           ports:
             - containerPort: 9080
               protocol: TCP
